--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
     </div>
     <div class="skill"><h1 class="skill" id="skill1">My skills</h1></div>
     <div class="skills" id="items">
-        <div class="item" id="item1"><img src="/html5-g4c76ae79a_1920.jpg" alt="" height="250px" width="250px"></div>
-        <div class="item" id="item2"><img src="/c-gc5a7f00b8_1920.jpg" alt="" height="250px" width="250px"></div>
-        <div class="item" id="item3"><img src="/css-gc1c2b1b6e_1280.png" alt="" height="250px" width="250px"></div>
-        <div class="item" id="item4"><img src="/c-logo-icon-28389.png" alt=""  height="250px" width="250px" ></div>
+        <div class="item" id="item1"><img src="html5-g4c76ae79a_1920.jpg" alt="" height="250px" width="250px"></div>
+        <div class="item" id="item2"><img src="c-gc5a7f00b8_1920.jpg" alt="" height="250px" width="250px"></div>
+        <div class="item" id="item3"><img src="css-gc1c2b1b6e_1280.png" alt="" height="250px" width="250px"></div>
+        <div class="item" id="item4"><img src="c-logo-icon-28389.png" alt=""  height="250px" width="250px" ></div>
     </div>
     </div>
     <div class="educate">
