--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <style>
     body {
-        background: url(/water-g7fd9e9b38_1920.jpg);
+        background: url(water-g7fd9e9b38_1920.jpg);
     }
    
     .navbar {
@@ -125,7 +125,7 @@
     }
 
     .skills {
-        background: url(/cosmos-g4381b89de_1920.jpg);
+        background: url(cosmos-g4381b89de_1920.jpg);
         height: 300px;
         width: 100%;
        z-index: -1;
@@ -179,7 +179,7 @@
  
     .educate{
       /* border: 2px solid red; */
-      background: url(/books-g6b5c0218e_1920.jpg);
+      background: url(books-g6b5c0218e_1920.jpg);
       height: 30vw;
       width: 95vw;
       margin: 20px;
@@ -298,7 +298,7 @@
 </header>
 
     <div class="right">
-        <img src="/my pic.jpeg" alt="">
+        <img src="my pic.jpeg" alt="">
     </div>
     <div class="left">
         <h2>Hello, <br>My Name is <br>Kumari Deeksha 
